[FIX] update categories of sheetcells:   over-detailed "update_overview" in flash  causes  ActionDispatch::Cookies::CookieOverflow.  close #401

--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -19,3 +19,11 @@
     margin-top: -5px;
   }
 }
+table#sheetcell-change-list {
+  margin-bottom:1em;
+   tfoot td {
+    border-bottom:0;
+    color:#333;
+    font-style: italic;
+  }
+}
